# WutheringWavesUID

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
WutheringWavesUID/: version.py
WutheringWavesUID/templates/: 404.html  gacha_editor.html  index.html  upload.html
WutheringWavesUID/utils/: abyss_buff.py  bot_url.py  cache.py  calculate.py  char_info_utils.py  expression_ctx.py  hint.py  image.py  imagetool.py  limit_user_card.py  name_convert.py  refresh_char_detail.py  util.py  waves_send_msg.py
WutheringWavesUID/utils/api/: api.py  (+5 more)
WutheringWavesUID/wutheringwaves_abyss/: __init__.py  draw_abyss_card.py  draw_abyss_info.py  draw_challenge_card.py  draw_matrix_card.py  draw_matrix_info.py  draw_slash_card.py  draw_slash_info.py
WutheringWavesUID/wutheringwaves_alias/: __init__.py  char_alias_ops.py
WutheringWavesUID/wutheringwaves_analyzecard/: Phantom_check.py  ScoreQuery.py  __init__.py  cardOCR.py  changeEcho.py  char_fetterDetail.py  detail_json.py  img_check.py  ocrspace.py  userData.py  user_info_utils.py
WutheringWavesUID/wutheringwaves_ann/: __init__.py  ann_card.py
WutheringWavesUID/wutheringwaves_calendar/: __init__.py  calendar_model.py  draw_calendar_card.py  draw_offical_calendar_card.py
WutheringWavesUID/wutheringwaves_charinfo/: __init__.py  delete_char_card.py  draw_char_card.py  draw_refresh_char_card.py  role_info_change.py  upload_card.py
WutheringWavesUID/wutheringwaves_charlist/: __init__.py  draw_char_list.py
WutheringWavesUID/wutheringwaves_code/: __init__.py
WutheringWavesUID/wutheringwaves_config/: __init__.py  config_default.py  set_config.py  show_config.py
WutheringWavesUID/wutheringwaves_develop/: __init__.py  develop.py
WutheringWavesUID/wutheringwaves_echo/: __init__.py  draw_echo_list.py
WutheringWavesUID/wutheringwaves_explore/: __init__.py  draw_explore_card.py
WutheringWavesUID/wutheringwaves_gachalog/: __init__.py  draw_gachalogs.py  edit_gachalogs.py  get_gachalogs.py  model.py  model_for_waves_plugin.py
WutheringWavesUID/wutheringwaves_grouprank/: __init__.py  draw_group_rank_card.py  endless_group_rank.py  models.py
WutheringWavesUID/wutheringwaves_help/: __init__.py  change_help.py  get_help.py  help.json
WutheringWavesUID/wutheringwaves_login/: login.py
WutheringWavesUID/wutheringwaves_master/: __init__.py
WutheringWavesUID/wutheringwaves_more/: __init__.py  draw_poker.py
(+482 files in other folders)
